Refactored project to support Java 10. Java 11 is not supported by Lombok and AspectJ yet, so we have to wait for new releases. Lombok was removed at all for now, as it doesn't work well with modular projects. New SPI updates affected coverage, as it's not possible to test implementation classes within test sources root. The only option is moving implementations outside to a separate module. But I don't believe we want to split tests from main sources.